More...  things, yes.  Cobbling together junk at the moment really.

--- a/html/demo.html
+++ b/html/demo.html
@@ -76,12 +76,69 @@
                     <div class="col11">11</div>
                 </div>
             </div>
-
         </section>
 
+        <section>
+            <h1>The usual</h1>
+
+            <p>Paragraphs.</p>
+
+            <p>Inline stuff: <em>em</em>, <strong>strong</strong>, <code>code</code>, <tt>tt</tt>, <var>var</var>, <samp>samp</samp>, <kbd>kbd</kbd>.</p>
+
+            <p>Semantic usage!  <kbd><kbd>Alt</kbd>+<kbd>F4</kbd></kbd>, or use <kbd><kbd>^A</kbd> <kbd>c</kbd></kbd> to open a new session.</p>
+
+            <p><var>E</var>=<var>m</var><var>c</var><sup>2</sup></p>
+
+            <p>HTML5 elements have <mark>semantic meanings</mark> which you should follow.</p>
+
+            <p>Rules:</p>
+
+            <hr>
+
+            <p>Blockquote:</p>
+
+            <blockquote>
+                <p>I'm sorry.  I'm so sorry.</p>
+            </blockquote>
+
+            <p>Cite it with figure.</p>
+
+            <figure>
+                <blockquote>
+                    <p>I'm sorry.  I'm so sorry.</p>
+                </blockquote>
+                <figcaption>
+                    The Tenth Doctor.
+                </figcaption>
+            </figure>
+        </section>
 
         <section>
-            <h1>Buttons</h1>
+            <h1>Blocks</h1>
+
+            <p>Lists:</p>
+
+            <ul>
+                <li>Apple</li>
+                <li>Orange</li>
+                <li>Banana</li>
+            </ul>
+
+            <ol>
+                <li>Collect underpants</li>
+                <li>???</li>
+                <li>Profit</li>
+            </ol>
+
+            <menu>
+                <li>New</li>
+                <li>Open</li>
+                <li>Save</li>
+            </menu>
+        </section>
+
+        <section>
+            <h1>Form controls</h1>
 
             <p>Yeah, we got yer buttons.</p>
 
