Add some form stuff.  Spruce up buttons.

--- a/html/demo.html
+++ b/html/demo.html
@@ -194,5 +194,39 @@
 
         </section>
 
+        <section>
+            <h1>Forms</h1>
+
+            TODO inline, vertical, ...
+            <form>
+                <fieldset>
+                    <legend>Here's a fieldset.</legend>
+                    <dl>
+                        <dt>Textbox</dt>
+                        <dd><input type="text"></dd>
+                        <dt>Checkbox (with label)</dt>
+                        <dd><label><input type="checkbox"> I would <em>love</em> to subscribe to your newsletter</label></dd>
+                        <dt>Select</dt>
+                        <dd><select><option>One</option><option>Two</option><option>Three</option></select></dd>
+                        <dt>Multi-select</dt>
+                        <dd>Okay, too lazy.</dd>
+                    </dl>
+                </fieldset>
+                <fieldset>
+                    <legend>Here's another.</legend>
+                    <dl>
+                        <dt>File input</dt>
+                        <dd><input type="file"></dd>
+                        <dt>Textarea</dt>
+                        <dd><textarea></textarea></dd>
+                    </dl>
+                </fieldset>
+                <fieldset>
+                    <footer>
+                        <button type="submit">Do the needful</button>
+                        <button>Cancel</button>
+                    </footer>
+                </fieldset>
+            </form>
     </body>
 </html>
