Vain attempt to fix lines between grid elements.

--- a/html/demo.html
+++ b/html/demo.html
@@ -30,7 +30,7 @@
             <p>It's not really a grid, as there's no row-spanning.</p>
 
             <div class="demo-columns-pills">
-                <div class="columns">
+                <div class="columns lined">
                     <div class="col1">1</div>
                     <div class="col1">1</div>
                     <div class="col1">1</div>
