--- a/html/demo.html
+++ b/html/demo.html
@@ -2,13 +2,14 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="../css/archetype-all.css">
+        <meta charset="utf8">
         <title>Archetype</title>
 
         <style type="text/css">
 
             .demo-columns-pills > .columns > div {
                 background: #eee;
-                border-radius: 0.5em;
+                border-radius: 0.25em;
                 padding: 0.5em;
             }
 
@@ -25,7 +26,9 @@
         </section>
 
         <section>
-            <h1>Columns</h1>
+            <h1>Layout (level 1)</h1>
+
+            <h2>Columns</h2>
 
             <p>It's not really a grid, as there's no row-spanning.</p>
 
@@ -76,10 +79,8 @@
                     <div class="col11">11</div>
                 </div>
             </div>
-        </section>
 
-        <section>
-            <h1>The usual</h1>
+            <h2>The usual</h2>
 
             <p>Paragraphs.</p>
 
@@ -135,6 +136,68 @@
                 <li>Open</li>
                 <li>Save</li>
             </menu>
+        </section>
+
+        <section>
+            <h1>Tables</h1>
+
+            <p>With <code>.table</code>:</p>
+
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Pokémon</th>
+                        <th>ID</th>
+                        <th>Type</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Eevee</td>
+                        <td>133</td>
+                        <td>normal</td>
+                    </tr>
+                    <tr>
+                        <td>Kecleon</td>
+                        <td>352</td>
+                        <td>normal</td>
+                    </tr>
+                    <tr>
+                        <td>Mew</td>
+                        <td>151</td>
+                        <td>psychic</td>
+                    </tr>
+                </tbody>
+            </table>
+
+            <p>Or more:</p>
+
+            <table class="table table-striped table-hover">
+                <thead>
+                    <tr>
+                        <th>Pokémon</th>
+                        <th>ID</th>
+                        <th>Type</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Eevee</td>
+                        <td>133</td>
+                        <td>normal</td>
+                    </tr>
+                    <tr>
+                        <td>Kecleon</td>
+                        <td>352</td>
+                        <td>normal</td>
+                    </tr>
+                    <tr>
+                        <td>Mew</td>
+                        <td>151</td>
+                        <td>psychic</td>
+                    </tr>
+                </tbody>
+            </table>
         </section>
 
         <section>
