Little bit of button cleanup and prettierification.

--- a/html/demo.html
+++ b/html/demo.html
@@ -207,12 +207,14 @@
 
             <p>
                 <button>Click me!</button>
-                <button class="btn lvl-info">No, click <em>me</em>.</button>
-                <button class="btn lvl-success">I am success.</button>
-                <button class="btn btn-submit">Do the needful</button>
-                <button class="btn btn-clear">Undo everything</button>
-                <input type="submit" class="btn btn-submit" value="Ooh.">
-                <button class="btn lvl-error">It's broken...</button>
+                <button class="btn success">I am success.</button>
+                <button class="btn error">Whoops...</button>
+                <button class="btn warning">Hey, about that.</button>
+                <button class="btn info">Just an FYI</button>
+                <button class="btn btn-primary">Do the needful</button>
+                <button class="btn btn-reset">Undo everything</button>
+                <input type="submit" class="btn btn-primary" value="Ooh.">
+                <button class="btn" disabled>Disabled</button>
             </p>
 
 
@@ -286,7 +288,7 @@
                 </fieldset>
                 <fieldset>
                     <footer>
-                        <button type="submit">Do the needful</button>
+                        <button type="submit" class="btn btn-primary">Do the needful</button>
                         <button>Cancel</button>
                     </footer>
                 </fieldset>
