Put #ccc in a variable.

--- a/html/demo.html
+++ b/html/demo.html
@@ -253,7 +253,7 @@
             <p>
                 <span class="txt-set">
                     <input type="text">
-                    <button>Go →</button>
+                    <button class="btn btn-primary">Go →</button>
                 </span>
             </p>
 
