Restore button gradients; bring subclasses in line with bootstrap.

--- a/html/demo.html
+++ b/html/demo.html
@@ -209,8 +209,9 @@
                 <button>Click me!</button>
                 <button class="btn success">I am success.</button>
                 <button class="btn error">Whoops...</button>
-                <button class="btn warning">Hey, about that.</button>
                 <button class="btn info">Just an FYI</button>
+                <button class="btn warning">Hey, about that.</button>
+                <button class="btn danger">Watch out...</button>
                 <button class="btn btn-primary">Do the needful</button>
                 <button class="btn btn-reset">Undo everything</button>
                 <input type="submit" class="btn btn-primary" value="Ooh.">
